# US-apps

./: README.md
AppAPI/: .gitignore  AppAPI.bat  CMakeLists.txt  LICENSE.txt  README.md
AppAPI/apps/QmlTestApp/: CMakeLists.txt  ImageItem.cpp  ImageItem.hpp  QmlTestApp.cpp  QmlTestApp.hpp  QmlTestAppStandalone.cpp  app.qml  app.qrc  packages.config
AppAPI/apps/QtQuickApp/: .gitignore  CMakeLists.txt  ImageProvider2d.cpp  ImageProvider2d.hpp  PluginImpl.cpp  PluginImpl.hpp  QtQuickApp.cpp  QtQuickApp.hpp  UNREGISTER_QtQuickApp.bat  main.cpp  main.qml  test2d.qrc
AppAPI/apps/QtWebBrowserApp/: .gitignore  CMakeLists.txt  PluginImpl.cpp  PluginImpl.hpp  QtWebBrowserApp.cpp  QtWebBrowserApp.hpp  UNREGISTER_QtWebBrowserApp.bat  main.cpp  main.qml  module.def  qtwebbrowserapp.qrc
AppAPI/apps/QtWidgetApp/: .gitignore  CMakeLists.txt  CMakeSettings.json  ImageHandler.cpp  ImageHandler.h  ImageHandler.ui  LogHandler.cpp  LogHandler.h  LogHandler.ui  MeasurementsHandler.cpp  MeasurementsHandler.h  MeasurementsHandler.ui  PatientHandler.cpp  PatientHandler.h  PatientHandler.ui  PluginImpl.cpp  PluginImpl.h  QtWidgetApp.cpp  QtWidgetApp.hpp  UNREGISTER_QtWidgetApp.bat  main.cpp  pluginmainwnd.ui
AppAPI/apps/QtWidgetAppInstaller/: License.rtf  Product.wxs  QtWidgetAppInstaller.wixproj
AppAPI/apps/WinFormsApp/: ImageUtil.cs  PluginControl.Designer.cs  PluginControl.cs  REGISTER.txt  UNREGISTER_WinFormsApp.bat  WinFormsApp.csproj  packages.config
AppAPI/apps/WinFormsApp/Properties/: AssemblyInfo.cs
AppAPI/apps/WinFormsAppInstaller/: License.rtf  Product.wxs  REGISTER_regasm.js  WinFormsAppInstaller.wixproj
AppAPI/apps/shared/: ImageLoad.hpp  LoadFile.hpp  MovieLoader.cpp  MovieLoader.hpp  QImageSupport.hpp
AppAPI/buildscripts/: IOSBundleInfo.plist.in  _version.rc.in  iOS.cmake
GE_CVUS_Loader/: Gijs_Readme.txt  LICENSE.txt  README.md
StreamClient/: LICENSE.txt  README.md  StreamClientTest.cpp
